--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <hr>
   <center>
     <h1>welcome to </h1>
-    <h1><ins>my resturant----------</ins></h1>
+    <h1><ins>my resturant</ins></h1>
   </center>
   <hr>
   <center>
@@ -34,7 +34,7 @@
   </ul>
   <hr>
   <center><p>any kind of queury or question contact us </p></center>
-  <a href="tell:03151187488">03151187488</a>
+  <center><a href="tel:03151187488">03151187488</a></center>
 
 </body>
 </html>
